@@ -282,7 +282,8 @@ Restiq.prototype._endWithError = function _endWithError( req, res, err, next ) {
 // ----------------------------------------------------------------
 
 Restiq.prototype.addStep = function addStep( func, where ) {
-    if (!where) where = 'use';
+    if (typeof func === 'string') { var t = where; where = func; func = t; }
+    where = where || 'use';
     if (Array.isArray(func)) {
         for (var i=0; i<func.length; i++) this.addStep(func[i], where);
         return;
